--- a/CuidooApp/Scenes/Requesting/Cells/DataPictureCell/DataPictureCell.xib
+++ b/CuidooApp/Scenes/Requesting/Cells/DataPictureCell/DataPictureCell.xib
@@ -1,21 +1,69 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="DataPictureCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="216" id="KGk-i7-Jjw" customClass="DataPictureCell" customModule="CuidooApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="322" height="216"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="322" height="216"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Claudia" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="144-Hn-3aI">
+                        <rect key="frame" x="125" y="128" width="72.5" height="26.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="34 anos" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dFS-7P-mpc">
+                        <rect key="frame" x="130" y="158.5" width="62" height="21"/>
+                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Estudante de Enfermagem" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Njo-ew-WFN">
+                        <rect key="frame" x="61" y="183.5" width="200.5" height="21"/>
+                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="moça" translatesAutoresizingMaskIntoConstraints="NO" id="Y1b-Qi-waX">
+                        <rect key="frame" x="111" y="16" width="100" height="100"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="100" id="W3L-dA-Lfu"/>
+                            <constraint firstAttribute="width" constant="100" id="Xdb-RB-JVC"/>
+                        </constraints>
+                    </imageView>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="Njo-ew-WFN" firstAttribute="top" secondItem="dFS-7P-mpc" secondAttribute="bottom" constant="4" id="1Wb-ls-gQ7"/>
+                    <constraint firstItem="Njo-ew-WFN" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="kIs-R0-iDM"/>
+                    <constraint firstItem="Y1b-Qi-waX" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="la2-nn-XdV"/>
+                    <constraint firstItem="dFS-7P-mpc" firstAttribute="top" secondItem="144-Hn-3aI" secondAttribute="bottom" constant="4" id="mv0-dc-Kdb"/>
+                    <constraint firstItem="144-Hn-3aI" firstAttribute="top" secondItem="Y1b-Qi-waX" secondAttribute="bottom" constant="12" id="oRd-mW-ms4"/>
+                    <constraint firstItem="dFS-7P-mpc" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="qam-PE-MZm"/>
+                    <constraint firstItem="Y1b-Qi-waX" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="wYY-U4-k8r"/>
+                    <constraint firstItem="144-Hn-3aI" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="ybF-mK-GBW"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="ageLabel" destination="dFS-7P-mpc" id="05K-OA-VKm"/>
+                <outlet property="babySitterImage" destination="Y1b-Qi-waX" id="DHW-aN-j00"/>
+                <outlet property="nameLabel" destination="144-Hn-3aI" id="zVK-92-j4J"/>
+                <outlet property="ocupationLabel" destination="Njo-ew-WFN" id="iZM-qa-KCM"/>
+            </connections>
+            <point key="canvasLocation" x="133.33333333333334" y="210.9375"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="moça" width="359" height="621"/>
+    </resources>
 </document>
