--- a/CuidooApp/Babysitter/Storyboards/OnGoingMatch.storyboard
+++ b/CuidooApp/Babysitter/Storyboards/OnGoingMatch.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hCx-fv-2eT">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
@@ -7,17 +7,55 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Em andamento-->
         <scene sceneID="vTR-VC-QZG">
             <objects>
-                <viewController id="7g3-tF-Fu7" sceneMemberID="viewController">
+                <viewController id="7g3-tF-Fu7" customClass="GoingOnMatchViewController" customModule="CuidooApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="O6Z-vY-5en">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ny9-Nb-lfj">
+                                <rect key="frame" x="215" y="780" width="183" height="66"/>
+                                <color key="backgroundColor" red="0.92923806980000001" green="0.92923806980000001" blue="0.92923806980000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="66" id="OU0-WL-7ez"/>
+                                </constraints>
+                                <state key="normal" title="Finalizar"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lMQ-VT-PFz">
+                                <rect key="frame" x="16" y="780" width="183" height="66"/>
+                                <color key="backgroundColor" red="0.92923806980000001" green="0.92923806980000001" blue="0.92923806980000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="66" id="SSC-Id-ck1"/>
+                                </constraints>
+                                <state key="normal" title="Reportar"/>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5sp-HS-F1E" customClass="GoingOnMatchView" customModule="CuidooApp" customModuleProvider="target">
+                                <rect key="frame" x="8" y="96" width="398" height="668"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="lMQ-VT-PFz" firstAttribute="leading" secondItem="VqC-Dv-8O0" secondAttribute="leading" constant="16" id="8cl-AP-cYj"/>
+                            <constraint firstItem="VqC-Dv-8O0" firstAttribute="trailing" secondItem="ny9-Nb-lfj" secondAttribute="trailing" constant="16" id="GWH-8l-4ac"/>
+                            <constraint firstItem="5sp-HS-F1E" firstAttribute="top" secondItem="VqC-Dv-8O0" secondAttribute="top" constant="8" id="J0W-MC-bzK"/>
+                            <constraint firstItem="VqC-Dv-8O0" firstAttribute="bottom" secondItem="lMQ-VT-PFz" secondAttribute="bottom" constant="16" id="MLi-e0-ds4"/>
+                            <constraint firstItem="ny9-Nb-lfj" firstAttribute="leading" secondItem="lMQ-VT-PFz" secondAttribute="trailing" constant="16" id="OP4-da-xLH"/>
+                            <constraint firstItem="lMQ-VT-PFz" firstAttribute="width" secondItem="ny9-Nb-lfj" secondAttribute="width" id="OWq-3H-HGc"/>
+                            <constraint firstItem="ny9-Nb-lfj" firstAttribute="centerY" secondItem="lMQ-VT-PFz" secondAttribute="centerY" id="VUn-Jr-CkR"/>
+                            <constraint firstItem="VqC-Dv-8O0" firstAttribute="trailing" secondItem="5sp-HS-F1E" secondAttribute="trailing" constant="8" id="aav-qc-Uh0"/>
+                            <constraint firstItem="5sp-HS-F1E" firstAttribute="leading" secondItem="VqC-Dv-8O0" secondAttribute="leading" constant="8" id="oPd-C8-hyt"/>
+                            <constraint firstItem="ny9-Nb-lfj" firstAttribute="top" secondItem="5sp-HS-F1E" secondAttribute="bottom" constant="16" id="yj6-ML-nhM"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="VqC-Dv-8O0"/>
                     </view>
-                    <navigationItem key="navigationItem" id="CNt-gn-Sz4"/>
+                    <navigationItem key="navigationItem" title="Em andamento" id="CNt-gn-Sz4">
+                        <barButtonItem key="rightBarButtonItem" image="text.bubble" catalog="system" id="HTc-QA-ARm">
+                            <color key="tintColor" red="0.99824029209999998" green="0.39281293750000001" blue="0.39213877920000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1dn-xD-Quj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -40,4 +78,7 @@
             <point key="canvasLocation" x="-793" y="67"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="text.bubble" catalog="system" width="64" height="54"/>
+    </resources>
 </document>
