--- a/CuidooApp/Mom/Storyboards/Requested.storyboard
+++ b/CuidooApp/Mom/Storyboards/Requested.storyboard
@@ -1,7 +1,60 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--View Controller-->
+        <scene sceneID="Zar-dr-Wgv">
+            <objects>
+                <viewController id="aYl-G2-36s" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="flJ-zd-HrM">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NpJ-Pk-saw">
+                                <rect key="frame" x="215" y="780" width="183" height="66"/>
+                                <color key="backgroundColor" red="0.92923806980000001" green="0.92923806980000001" blue="0.92923806980000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="66" id="el3-x9-dKb"/>
+                                </constraints>
+                                <state key="normal" title="Finalizar"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SUs-aN-pxP">
+                                <rect key="frame" x="16" y="780" width="183" height="66"/>
+                                <color key="backgroundColor" red="0.92923806980000001" green="0.92923806980000001" blue="0.92923806980000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="66" id="6Z2-Bp-VD5"/>
+                                </constraints>
+                                <state key="normal" title="Reportar"/>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WU2-yd-dC9" customClass="BabySitterInfosView" customModule="CuidooApp" customModuleProvider="target">
+                                <rect key="frame" x="16" y="44" width="382" height="720"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="WU2-yd-dC9" firstAttribute="leading" secondItem="h6R-F9-4sy" secondAttribute="leading" constant="16" id="Jdn-sL-y29"/>
+                            <constraint firstItem="NpJ-Pk-saw" firstAttribute="top" secondItem="WU2-yd-dC9" secondAttribute="bottom" constant="16" id="Mtu-tY-tt1"/>
+                            <constraint firstItem="WU2-yd-dC9" firstAttribute="top" secondItem="h6R-F9-4sy" secondAttribute="top" id="Or0-DE-nCU"/>
+                            <constraint firstItem="NpJ-Pk-saw" firstAttribute="leading" secondItem="SUs-aN-pxP" secondAttribute="trailing" constant="16" id="PRr-np-qhC"/>
+                            <constraint firstItem="SUs-aN-pxP" firstAttribute="leading" secondItem="h6R-F9-4sy" secondAttribute="leading" constant="16" id="dLP-8N-DQi"/>
+                            <constraint firstItem="SUs-aN-pxP" firstAttribute="width" secondItem="NpJ-Pk-saw" secondAttribute="width" id="gSZ-Lx-9PK"/>
+                            <constraint firstItem="h6R-F9-4sy" firstAttribute="trailing" secondItem="WU2-yd-dC9" secondAttribute="trailing" constant="16" id="kAU-dj-NUM"/>
+                            <constraint firstItem="h6R-F9-4sy" firstAttribute="trailing" secondItem="NpJ-Pk-saw" secondAttribute="trailing" constant="16" id="npH-oA-vwR"/>
+                            <constraint firstItem="NpJ-Pk-saw" firstAttribute="centerY" secondItem="SUs-aN-pxP" secondAttribute="centerY" id="vOK-DG-qWc"/>
+                            <constraint firstItem="h6R-F9-4sy" firstAttribute="bottom" secondItem="SUs-aN-pxP" secondAttribute="bottom" constant="16" id="wE1-sg-3zX"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="h6R-F9-4sy"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CzY-UC-Lv2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-219" y="-55"/>
+        </scene>
+    </scenes>
 </document>
